Fixed button spacing for Age Verification Modal

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1840,4 +1840,8 @@ label {
 		left: -4.6rem;
 		font-size: .75rem;
 	}
+
+	.ageVerificationButtons {
+		flex-direction: column;
+	}
 }
